--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ stroke-linejoin="round" class="feather feather-home">
         height="800" />
     
     <h2 class="author-name">0x90roblem blog</h2>
-    <p class="author-bio">Passionate about cybersecurity since always, throughout the years, I&#39;ve sought to seize every opportunity in this field. Thanks to university projects, participation in CTF groups, CyberChallenges, and work experiences, I have acquired various offensive cybersecurity skills. Eagerly seeking new things to learn and break.</p>
+    <p class="author-bio">Passionate about cybersecurity since always, throughout the years I&#39;ve sought to seize every opportunity in this field. Thanks to university projects, participation in CTF groups, CyberChallenge and work experiences, I have acquired various offensive cybersecurity skills. Eagerly seeking new things to learn and break.</p>
 </div>
 
         <main aria-label="Content">
@@ -180,7 +180,7 @@ stroke-linejoin="round" class="feather feather-home">
 </a>
 </div>
     <small class="footer_copyright">
-        © 2023 Paolo Filippini.
+        © 2024 Paolo Filippini
     </small>
 </footer><a href="#" title="Go to top" id="totop">
     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" stroke="currentColor" viewBox="0 96 960 960">
