--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -148,11 +148,11 @@ stroke-linejoin="round" class="feather feather-home">
 </ul>
 <p>Interests</p>
 <ul>
-<li>Web Security 🌍: I am trying to improve my skills in this area, reading articles,books and watch videos and open burp at least once a day 😄</li>
-<li>Volunteering: I am currently volunteering in CNGEI Milan (Scouts). Help the youger generation to become a tomorrow&rsquo;s good citizens and of course have fun in the meanwhile.</li>
-<li>CTFs 🚩: they help me continuously learn and practice what i read in the books.</li>
-<li>Reading books and blog posts 📖: the best way to discover new things, and go deeper on a subject. No starch press, project zero, live overflow are my favorites sources.</li>
-<li>Sports 🤸‍♀️: I&rsquo;m a calistenics beginner, trying to learn how to fly with no wings.</li>
+<li>🌍 Web Security: I am trying to improve my skills in this area, reading articles and books, watching videos and opening Burp at least once a day 😄</li>
+<li>🫱🏾‍🫲🏼 Volunteering : I am currently volunteering in CNGEI Milan (Scouts). Help the younger generation to become tomorrow&rsquo;s good citizens and, of course, have fun in the meanwhile.</li>
+<li>🚩 CTFs : they help me continuously learn and practice what i read in the books.</li>
+<li>📖 Reading books and blog posts: the best way to discover new things and go deeper on a subject. No starch press, Project zero, Live overflow are my favorites sources.</li>
+<li>🤸‍♀️ Sports: I am a calistenics beginner, trying to learn how to fly with no wings.</li>
 </ul>
 
             </div>
@@ -174,7 +174,7 @@ stroke-linejoin="round" class="feather feather-home">
 </a>
 </div>
     <small class="footer_copyright">
-        © 2023 Paolo Filippini.
+        © 2024 Paolo Filippini
     </small>
 </footer><a href="#" title="Go to top" id="totop">
     <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" stroke="currentColor" viewBox="0 96 960 960">
