--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -125,35 +125,18 @@ stroke-linejoin="round" class="feather feather-home">
             <div class="page-content">
                 <p>Hi everyone 👋</p>
 <p>I am Paolo, Cybercsecurity Enthusiast</p>
-<ul>
-<li>
 <p>😄 Pronouns: He/Him</p>
-</li>
-<li>
 <p>📍 Milan, Italy</p>
-</li>
-<li>
 <p>🔭 I’m currently working as Defensive cybersecurity specialist for Horizon Consulting. Help client to defense their perimeter to attacker.</p>
-</li>
-<li>
 <p>🌱 I’m currently learning Web security and Malware Analysis</p>
-</li>
-<li>
 <p>Leanguages 🇮🇹 🇺🇸: Italian (Native speaker), English (Fluent)</p>
-</li>
-<li>
-<p>📫 How to reach me:
-<a href="mailto:paolo.filippini99@gmail.com">paolo.filippini99@gmail.com</a></p>
-</li>
-</ul>
+<p>📫 How to reach me: <a href="mailto:paolo.filippini99@gmail.com">paolo.filippini99@gmail.com</a></p>
 <p>Interests</p>
-<ul>
-<li>🌍 Web Security: I am trying to improve my skills in this area, reading articles and books, watching videos and opening Burp at least once a day 😄</li>
-<li>🫱🏾‍🫲🏼 Volunteering : I am currently volunteering in CNGEI Milan (Scouts). Help the younger generation to become tomorrow&rsquo;s good citizens and, of course, have fun in the meanwhile.</li>
-<li>🚩 CTFs : they help me continuously learn and practice what i read in the books.</li>
-<li>📖 Reading books and blog posts: the best way to discover new things and go deeper on a subject. No starch press, Project zero, Live overflow are my favorites sources.</li>
-<li>🤸‍♀️ Sports: I am a calistenics beginner, trying to learn how to fly with no wings.</li>
-</ul>
+<p>🌍 Web Security: I am trying to improve my skills in this area, reading articles and books, watching videos and opening Burp at least once a day 😄</p>
+<p>🫱🏾‍🫲🏼 Volunteering : I am currently volunteering in CNGEI Milan (Scouts). Help the younger generation to become tomorrow’s good citizens and, of course, have fun in the meanwhile.</p>
+<p>🚩 CTFs : they help me continuously learn and practice what i read in the books.</p>
+<p>📖 Reading books and blog posts: the best way to discover new things and go deeper on a subject. No starch press, Project zero, Live overflow are my favorites sources.</p>
+<p>🤸‍♀️ Sports: I am a calistenics beginner, trying to learn how to fly with no wings.</p>
 
             </div>
         </article></main>
